--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
-INCLUDES = @EVAS_CFLAGS@ @ECORE_CFLAGS@ @ECORE_CON_CFLAGS@ @ECORE_EVAS_CFLAGS@ @EDJE_CFLAGS@
-AM_CFLAGS=-Wall -DDATADIR='"$(datadir)"'
+INCLUDES = @EVAS_CFLAGS@ @ECORE_CFLAGS@ @ECORE_CON_CFLAGS@ @ECORE_EVAS_CFLAGS@ @EDJE_CFLAGS@ @LIBKEYS_CFLAGS@
+AM_CFLAGS=--std=c99 -Wall -DDATADIR='"$(datadir)"'
 
 bin_PROGRAMS = elock
 
 elock_SOURCES = elock.c
-elock_LDADD = @EVAS_LIBS@ @ECORE_LIBS@ @ECORE_CON_LIBS@ @ECORE_EVAS_LIBS@ @EDJE_LIBS@
+elock_LDADD = @EVAS_LIBS@ @ECORE_LIBS@ @ECORE_CON_LIBS@ @ECORE_EVAS_LIBS@ @EDJE_LIBS@ @LIBKEYS_LIBS@
 
