Converted to new style of themes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
-INCLUDES = @EFL_CFLAGS@ @LIBKEYS_CFLAGS@
-AM_CFLAGS=--std=c99 -Wall -DDATADIR='"$(datadir)"'
+INCLUDES = @EFL_CFLAGS@ @LIBKEYS_CFLAGS@ @EOI_CFLAGS@
+AM_CFLAGS=--std=c99 -Wall
 
 bin_PROGRAMS = elock
 
 elock_SOURCES = elock.c
-elock_LDADD = @EFL_LIBS@ @LIBKEYS_LIBS@
+elock_LDADD = @EFL_LIBS@ @LIBKEYS_LIBS@ @EOI_LIBS@
