Make a separate "Azbooka" theme

--- a/themes/Makefile.am
+++ b/themes/Makefile.am
@@ -1,10 +1,2 @@
-THEMES=$(wildcard *.edc)
-COMPILED_THEMES=$(patsubst %.edc,%.edj,$(THEMES))
+SUBDIRS=default azbooka
 
-themedir=$(datadir)/eoi/themes/default
-theme_DATA=$(COMPILED_THEMES)
-
-%.edj: %.edc
-	edje_cc $< $@
-
-CLEANFILES=$(COMPILED_THEMES)
