Use dialog functionality from libeoi

--- a/themes/default/Makefile.am
+++ b/themes/default/Makefile.am
@@ -5,6 +5,6 @@ themedir=$(datadir)/eoi/themes/default
 theme_DATA=$(COMPILED_THEMES)
 
 %.edj: %.edc
-	edje_cc $< $@
+	edje_cc -id .. $< $@
 
 CLEANFILES=$(COMPILED_THEMES)
