--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,9 @@
 Source: elock
 Section: gui
 Maintainer: Alexander Kerner <lunohod@openinkpot.org>
-Build-Depends: debhelper (>= 7), autoconf, automake, pkg-config, libecore-dev, libevas-dev, libedje-dev, libkeys-dev, libedje-bin, libeoi-dev
+Build-Depends: debhelper (>= 7), autoconf, automake, pkg-config, libecore-dev (>= 0.9.9.49898-5), libevas-dev, libedje-dev, libkeys-dev, libedje-bin, libeoi-dev
 XCS-Cross-Host-Build-Depends: debhelper (>= 7), autoconf, automake, pkg-config, libedje-bin
-XCS-Cross-Build-Depends: libecore-dev, libevas-dev, libedje-dev, libkeys-dev, libeoi-dev
+XCS-Cross-Build-Depends: libecore-dev (>= 0.9.9.49898-5), libevas-dev, libedje-dev, libkeys-dev, libeoi-dev
 Priority: optional
 Standards-Version: 3.8.3
 
